--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.zhentao</groupId>
   <artifactId>test</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+  <properties>
+    <spring.framework.version>3.2.0.RELEASE</spring.framework.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -21,48 +24,24 @@
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.1.3</version>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.2.2</version>
     </dependency>
     <dependency>
-      <groupId>cascading</groupId>
-      <artifactId>cascading-core</artifactId>
-      <version>1.2.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-core</artifactId>
-      <version>0.20.2-cdh3u4</version>
-      <!-- <version>1.0.3</version> -->
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.citygrid.dependencies</groupId>
-        <artifactId>aws</artifactId>
-        <version>1.1.0</version>
-        <type>pom</type>
-    </dependency>
-    <dependency>
-        <groupId>com.google.code.gson</groupId>
-        <artifactId>gson</artifactId>
-        <version>2.2.2</version>
-    </dependency>
-    <dependency>
-        <groupId>spy</groupId>
-        <artifactId>spymemcached</artifactId>
-        <version>2.8.4</version>
+      <groupId>net.spy</groupId>
+      <artifactId>spymemcached</artifactId>
+      <version>2.12.3</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>${spring.framework.version}</version>
-    </dependency>    
+    </dependency>
   </dependencies>
-  <properties>
-    <spring.framework.version>3.2.0.RELEASE</spring.framework.version>
-  </properties>  
+
   <build>
     <plugins>
       <plugin>
@@ -100,14 +79,4 @@
       </plugin>
     </plugins>
   </build>
-  <repositories>
-    <repository>
-      <id>conjars.org</id>
-      <url>http://conjars.org/repo</url>
-    </repository>
-    <repository>
-      <id>cloudera</id>
-      <url>https://repository.cloudera.com/content/repositories/releases/</url>
-    </repository>
-  </repositories>
 </project>
